# oscpie

./: Cargo.toml  build.rs  build.ts  config.json5  format.bat  test.html  think.txt
config/: config.json  spritesheet.json
src/: action_behaviours.rs  components.rs  config.rs  debug.rs  main.rs  menu.rs  openvr.rs  prelude.rs  scripting.rs  sprite.rs  story.rs  types.rs  utils.rs  versioned.rs  vulkan.rs
src/action_behaviours/: exec.rs  key_stroke.rs
src/components/: pie_menu.rs  pie_menu_item.rs  sprite.rs
src/config/: v1.rs
src/openvr/: input.rs
src/openvr/input/: generated.rs  prelude.rs
test_files/config/: config.json
test_files/sprites/: sprites.json
utils/: generate_action_codes.ts
